docs: README.md / CLAUDE.md 최신 상태 반영
- vec/Vec* 잔존 표현 제거, Scalar/Turbo 2백엔드 명명 일관화
- 사라진 StoryGenerator·StoriesBpePrep 흔적 제거 (BpePrep / Ccmc*Prep로 갱신)
- runXxx 태스크 목록을 build.gradle.kts와 동기화 (runChatTurbo, runInferenceApi, runTurboBench, runBench5/10MTurbo, runEncodeWithExistingMeta, runSplitByTokenRatio 추가)
- experiments 진입점 개수 정정 (30여 → 32)
- server/InferenceApiMain.kt + Ktor 2.3.12 의존성 신규 섹션
- TurboTensorPool / TurboDropout 누락분 보강
- ckpt schema 두 백엔드 동일(`model/<datasetName>/<expName>/v0001/`) 명시
- 마이그레이션 잔여 표현(이전 이름, 옛 schema, deprecated 등) 제거 — 최신 상태만 기술

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>